--- a/packages/front/app/style.module.css
+++ b/packages/front/app/style.module.css
@@ -7,23 +7,23 @@
 }
 
 .container .title .titlePart1 {
-  color: var(--color-green-darker);
+  color: var(--color-green-600);
 }
 
 .container .title .titlePart2 {
-  color: var(--color-orange-darker);
+  color: var(--color-orange-600);
 }
 
 .container .stamp {
   .version {
-    color: var(--color-red-darker2);
+    color: var(--color-red-700);
     line-height: 1;
     font-size: 1.5rem;
     margin-bottom: 0;
   }
   .date {
     margin-top: 0;
-    color: var(--color-primary-darker3);
+    color: var(--color-primary-800);
     font-size: 0.75rem;
   }
 }
