--- a/packages/front/modules/musics/musics/entry/body/styles.module.css
+++ b/packages/front/modules/musics/musics/entry/body/styles.module.css
@@ -41,10 +41,10 @@
 
   .optionalButton,
   details > summary {
-    color: var(--color-primary-darker2);
+    color: var(--color-primary);
 
     &:hover {
-      color: var(--color-primary);
+      color: var(--color-primary-hover);
       cursor: pointer;
       user-select: none;
     }
